--- a/config/locales/ru.yml
+++ b/config/locales/ru.yml
@@ -44,7 +44,7 @@ ru:
         upload_document_photo: 'Загрузите фото документов'
         submit: Продоложить
         back: Назад
-        sending: Отправляю..
+        sending: Отправляю...
         last_refused_title: 'Ваша последняя заявка была отклонена по причине:'
         additional_documents:  В случае необходимости служба поддержки может запросить дополнительную информацию, например - видео с документом
         instruction: Инструкция
